chore: checked -> checking

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -13,7 +13,7 @@ Release versions:
 
 One minor new feature in this one, hence the bump to 1.1.0 instead of 1.0.5. Native popup notifications now have centered location options available.
 
-Of important note in this release is that signature checked has had a fix which should now allow it to work at all, so users with additional plugins will see *one time* warnings about signature validation. You can choose to accept this and you will not see the warning again for that plugin, or preferably for any plugins by that author if the author is signing their plugins.
+Of important note in this release is that signature checking has had a fix which should now allow it to work at all, so users with additional plugins will see *one time* warnings about signature validation. You can choose to accept this and you will not see the warning again for that plugin, or preferably for any plugins by that author if the author is signing their plugins.
 
 For plugin authors there is an update to Framework which adds a `ThemeChanged` method to the plugin interface, allowing your plugins to immediately handle changes to the application theme.
 
