chore: add contact links for feedback

--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -18,4 +18,4 @@ For whatever reason it fails to correctly default to a valid audio device, if yo
 
 Dark theme is a bit wonky, you will likely need to switch to light. This is also found at the bottom of the core tab.
 
-If you try this please let me know how it goes. I've only given it the most cursory of initial testing, basically just making sure it run.
+If you try this please let me know how it goes. I've only given it the most cursory of initial testing, basically just making sure it runs. You can contact me on [Discord](https://discord.gg/RAFDHsY), the [Elite Forums](https://forums.frontier.co.uk/threads/elite-observatory-search-your-journal-for-potentially-interesting-objects-or-notify-you-of-new-ones-on-the-fly-while-exploring.521544/), [Github](https://github.com/Xjph/ObservatoryCore), [Reddit](https://www.reddit.com/user/Xjph/), or [Lemmy](https://lemmy.ca/u/vithigar).
