--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -10,7 +10,7 @@ description: Experimental Builds of Elite Observatory Core
 Release versions:
   * [Installer](https://xjph.net/Observatory/ObservatoryWineSetup.exe)
 
-This is an experimental and likely bug-riddled version with some build-time tweaks to improve compatability with Wine.
+This is an experimental and likely bug-riddled version with some build-time tweaks to improve compatibility with Wine.
 
 **Wine 9.0+ is required.** Prior versions have issues with .NET 8. You may need to change the application config in Lutris if the default Wine environment is something older.
 
