chore: mention changing journal path

--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -14,6 +14,8 @@ This is an experimental and likely bug-riddled version with some build-time twea
 
 **Wine 9.0+ is required.** Prior versions have issues with .NET 8. You may need to change the application config in Lutris if the default Wine environment is something older.
 
+You *will* need to manually specify your journal folder location. Double click the journal path in the core tab to change it. (This is intentionally obfuscated as people breaking their install by accidentally changing the path to something invalid had become an ongoing problem.)
+
 For whatever reason it fails to correctly default to a valid audio device, if you want to hear [Herald](/usage/plugins/herald) notifications you will need to select the "Wine Audio Mapper" in the audio device dropdown on the core tab.
 
 Dark theme is a bit wonky, you will likely need to switch to light. This is also found at the bottom of the core tab.
