chore: missing supergiant types in criteria doc

--- a/pages/usage/plugins/explorer/customcriteria.mdx
+++ b/pages/usage/plugins/explorer/customcriteria.mdx
@@ -475,7 +475,9 @@ The `parents` object requires a bit more data munging, on account of the origina
   * Self-descriptive: 
     * SupermassiveBlackHole
     * A_BlueWhiteSuperGiant
+    * B_BlueWhiteSuperGiant
     * F_WhiteSuperGiant
+    * G_WhiteSuperGiant
     * M_RedSuperGiant
     * M_RedGiant
     * K_OrangeGiant
