--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,7 +5,21 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-## Latest - v1.1.0 - Centered and Signed
+## Latest - v1.1.1 - Make it Pop!
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.1.1/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.1.1/WINE-ObservatoryPortable.zip)
+
+This version has a handle of fixes specific to this build which are listed below. For general fixes and features in this version refer to the [main release page](/release). Of note the new settings for popup transparency is recommended as the transparent popups do not present as intended on linux, at least in my own experience. Disabling this should *greatly* improve readability.
+
+In addition there is now a "portable" bundle available. This should be easier to setup for use via Steam Play for any user inclined to do so, while the installer is a smoother experience if using Lutris.
+
+- Improve settings handling to not wipe out previously saved settings
+- Handle settings saving/loading using the "portable" logic for both builds to avoid strange appdata interactions within WINE
+- Attempt to pick a sensible default location for the journal folder (assumes Steam version of Elite Dangerous)
+
+### v1.1.0 - Centered and Signed
 
 Release versions:
   * [Installer](https://xjph.net/Observatory/ObservatoryWineSetup.exe)
