--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,7 +5,15 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.1.1 - Make it Pop!
+## Latest - v1.1.2 - Minor Botanist Fix
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.2/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.2/ObservatoryPortable.zip)
+
+Fixes a minor issue in Botanist where the UI would not update after scanning a body.
+
+### v1.1.1 - Make it Pop!
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.1/ObservatorySetup.exe)
