--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,7 +5,15 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-## Latest - v1.1.1 - Make it Pop!
+## Latest - v1.1.2 - Minor Botanist Fix
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.1.2/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.1.2/WINE-ObservatoryPortable.zip)
+
+Fixes a minor issue in Botanist where the UI would not update after scanning a body.
+
+### v1.1.1 - Make it Pop!
 
 Release versions:
   * [Installer](https://xjph.net/Observatory/1.1.1/WINE-ObservatorySetup.exe)
