chore: 1.1.2 WINE note

--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -7,6 +7,8 @@ description: Experimental Builds of Elite Observatory Core
 
 ## Latest - v1.1.2 - Minor Botanist Fix
 
+> NOTE: There have been reports that this build is not functional in WINE/Proton. Feel free to try it, but it's currently recommended to remain on v1.1.1.
+
 Release versions:
   * [Installer](https://xjph.net/Observatory/1.1.2/WINE-ObservatorySetup.exe)
   * [Portable](https://xjph.net/Observatory/1.1.2/WINE-ObservatoryPortable.zip)
