chore: missed note for 1.1.1

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -35,6 +35,7 @@ In addition there is now a `/nomin` command line argument which will prevent Obs
   ]
 ```
 
+- Fixed handling of custom criteria with multi-line details and descriptions
 - Add `/nomin` launch option
 - Send notification from explorer individually when multiple criteria trigger on a single body
 - Potential minor performance improvement to grouped item handling
