--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,7 +5,15 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-## Latest - v1.1.2 - Minor Botanist Fix
+## Latest - v1.1.3 - Quick Ascendancy Bugfix
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.1.3/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.1.3/WINE-ObservatoryPortable.zip)
+
+In addition to the fixes on the main release page, this version should correct the build issues that prevented the 1.1.2 experimental build from working in most Wine environments.
+
+### v1.1.2 - Minor Botanist Fix
 
 > NOTE: There have been reports that this build is not functional in WINE/Proton. Feel free to try it, but it's currently recommended to remain on v1.1.1.
 
