--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -11,7 +11,7 @@ Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.3/ObservatorySetup.exe)
   * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.3/ObservatoryPortable.zip)
 
-Quick fix for crashes while in the bubble for players pledged to powers, plus some error handlig improvements in general. More likely coming soon as the full scope of changes to the journal for Ascendancy is are handled.
+Quick fix for crashes while in the bubble for players pledged to powers, plus some error handling improvements in general. More likely coming soon as the full scope of changes to the journal for Ascendancy is are handled.
 
 - Handles legal status `Allied` in `status.json`
 - More graceful handling of errors while reading journals in general, will now attempt to fall back to `JournalBase` before failing.
