--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,7 +5,17 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.1.3 - Quick Ascendancy Bugfix
+## Latest - v1.1.4 - Non-Blocking Error
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.4/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.4/ObservatoryPortable.zip)
+
+Another quick fix for an issue where the new non-fatal error message box could block the thread which triggered it, causing execution to stall until its responded to.
+
+- Make non-fatal error message non-blocking
+
+### v1.1.3 - Quick Ascendancy Bugfix
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.3/ObservatorySetup.exe)
