--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,7 +5,15 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-## Latest - v1.1.3 - Quick Ascendancy Bugfix
+## Latest - v1.1.4 - Non-Blocking Error
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.1.4/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.1.4/WINE-ObservatoryPortable.zip)
+
+No changes specific to the experimental build.
+
+### v1.1.3 - Quick Ascendancy Bugfix
 
 Release versions:
   * [Installer](https://xjph.net/Observatory/1.1.3/WINE-ObservatorySetup.exe)
