--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,7 +5,7 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-> **Wine 9.0+ is required.** Prior versions have issues with .NET 8. You may need to change the application config in Lutris if the default Wine environment is something older.
+> **Wine 9.0+ is required.** Prior versions have issues with .NET 8. If using Lutris you may need to change the application config if the default Wine environment is something older.
 
 ## Latest - v1.1.4 - Non-Blocking Error
 
