chore: adjust notifications heading

--- a/pages/usage/plugins/explorer/customcriteria.mdx
+++ b/pages/usage/plugins/explorer/customcriteria.mdx
@@ -388,7 +388,7 @@ Handles the `FSSDiscoveryScan` event which occurs after performing the initial F
 ---@End
 ```
 
-### Notifications
+## Notifications
 
 Explorer 1.1 also adds a new function for sending arbitraray notifications from custom criteria. These are both added to the Explorer results table and sent out to notifier plugins.
 
