--- a/pages/usage/plugins/explorer/customcriteria.mdx
+++ b/pages/usage/plugins/explorer/customcriteria.mdx
@@ -310,7 +310,7 @@ Handles the `FSDJump` journal event which contains the following travel and expl
 - `jump.FuelLevel` (float): Fuel remaining after jump
 - `jump.BoostUsed` (int): If present indicates type of boost used for jump. 
   - 1 - Basic Synthesis (x1.25)
-  - 2 - Standard Synthesis or White Dward (x1.5)
+  - 2 - Standard Synthesis or White Dwarf (x1.5)
   - 3 - Premium Synthesis (x2)
   - 4 - Neutron Star (x4)
 
