chore: small note

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -30,6 +30,7 @@ Finally, this update unfortunately _removes_ the Observatory Herald plugin from 
 - Fix issue where having no audio devices could cause a crash on startup
 - Fix issue where starting minimised would cause errors (`/nomin` startup option no longer required for min-ed-launcher users)
 - Added list of patreon supporters to "about" info
+- No longer check or enforce plugin signing
 
 ### v1.1.4 - Non-Blocking Error
 
