chore: note about plugin compatibility

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -12,6 +12,8 @@ Release versions:
 
 Verion 1.2.0 is a significant UI refactor based on post 1.0 feedback and a number of long standing requests. The "Core" tab has been completely reworked to present the plugin list in a more useful fashion, and each has its own menu button for common functionality rather than the unintuitive need to select items before hitting the buttons below. Core application settings have also moved out into their own window to reduce core tab clutter.
 
+> **IMPORTANT:** This update breaks compatility with many plugins. It will be necessary to update them before they will work correctly.
+
 Also, of particular note is native support for popping plugin tabs out into separate windows, which is a request that goes almost as far back as the initial release of Observatory Core.
 
 Finally, this update unfortunately _removes_ the Observatory Herald plugin from the installation bundle. A recent increse in popularity of both Observatory and Elite Dangerous in particular led to a significant increase in costs for the Azure-provided voices and it was no longer sustainable to cover those costs myself. In lieu of Herald voices a long standing issue where native voice notifications do not show all installed Windows voices has been fixed. Herald will likely return in the future as a Patreon backer perk.
