--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,18 +5,25 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.2.0 - Pop and Lock
+## Latest - v1.2.1 - For All
 
 Release versions:
-  * [Currently Available to Patreon backers only](https://www.patreon.com/posts/116456767), general release for all Sunday night at midnight UTC.
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.1/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.1/ObservatoryPortable.zip)
 
-Verion 1.2.0 is a significant UI refactor based on post 1.0 feedback and a number of long standing requests. The "Core" tab has been completely reworked to present the plugin list in a more useful fashion, and each has its own menu button for common functionality rather than the unintuitive need to select items before hitting the buttons below. Core application settings have also moved out into their own window to reduce core tab clutter.
+This is the public release of v1.2.0 and also fixes several bugs which were identified with that version.
 
-> **IMPORTANT:** This update breaks compatility with many plugins. It will be necessary to update them before they will work correctly.
+Enjoy!
+
+### v1.2.0 Release Notes
+
+Version 1.2.0 is a significant UI refactor based on post 1.0 feedback and a number of long standing requests. The "Core" tab has been completely reworked to present the plugin list in a more useful fashion, and each has its own menu button for common functionality rather than the unintuitive need to select items before hitting the buttons below. Core application settings have also moved out into their own window to reduce core tab clutter.
+
+> **IMPORTANT:** This update breaks compatibility with many plugins. It will be necessary to update them before they will work correctly.
 
 Also, of particular note is native support for popping plugin tabs out into separate windows, which is a request that goes almost as far back as the initial release of Observatory Core.
 
-Finally, this update unfortunately _removes_ the Observatory Herald plugin from the installation bundle. A recent increse in popularity of both Observatory and Elite Dangerous in particular led to a significant increase in costs for the Azure-provided voices and it was no longer sustainable to cover those costs myself. In lieu of Herald voices a long standing issue where native voice notifications do not show all installed Windows voices has been fixed. Herald will likely return in the future as a Patreon backer perk.
+Finally, this update unfortunately _removes_ the Observatory Herald plugin from the installation bundle. A recent increase in popularity of both Observatory and Elite Dangerous in particular led to a significant increase in costs for the Azure-provided voices and it was no longer sustainable to cover those costs myself. In lieu of Herald voices a long standing issue where native voice notifications do not show all installed Windows voices has been fixed. Herald will likely return in the future as a Patreon backer perk.
 
 - Refactored "Core" tab
   - New plugin list
@@ -34,178 +41,20 @@ Finally, this update unfortunately _removes_ the Observatory Herald plugin from 
 - Added list of patreon supporters to "about" info
 - No longer check or enforce plugin signing
 
-### v1.1.4 - Non-Blocking Error
+### v1.2.1 Bug Fixes
 
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.4/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.4/ObservatoryPortable.zip)
-
-Another quick fix for an issue where the new non-fatal error message box could block the thread which triggered it, causing execution to stall until its responded to.
-
-- Make non-fatal error message non-blocking
-
-### v1.1.3 - Quick Ascendancy Bugfix
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.3/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.3/ObservatoryPortable.zip)
-
-Quick fix for crashes while in the bubble for players pledged to powers, plus some error handling improvements in general. More likely coming soon as the full scope of changes to the journal for Ascendancy are implemented.
-
-- Handles legal status `Allied` in `status.json`
-- More graceful handling of errors while reading journals in general, will now attempt to fall back to `JournalBase` before failing.
-- Error logging improvements
-
-### v1.1.2 - Minor Botanist Fix
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.2/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.2/ObservatoryPortable.zip)
-
-Fixes a minor issue in Botanist where the UI would not update after scanning a body.
-
-### v1.1.1 - Make it Pop!
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.1/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.1/ObservatoryPortable.zip)
-
-> You can find a WINE-friendly build for use in linux on the [experimental build page](/release/experimental).
-
-Some more functionality for pop-up notifications in this one, with options for independent scaling of the text, and disabling the transparency effect. This latter option can improve the readability of the text in some situations, and may also serve as a workaround for some visual issues that had been reported with the popup notification.
-
-In addition there is now a `/nomin` command line argument which will prevent Observatory from starting minimized. This too is a workaround for some strange behaviour that was discovered when launching Observatory via min-ed-launcher. For those of you using that you can update the Observatory entry in your ed-min-launcher settings.json file and add `"arguments": "/nomin"` to the Observatory entry in the processes array. E.g.:
-
-```json
-"processes": 
-  [
-    {
-      "fileName": "C:\\Program Files\\Elite Observatory\\ObservatoryCore.exe",
-      "arguments": "/nomin"
-    }
-  ]
-```
-
-- Fixed handling of custom criteria with multi-line details and descriptions
-- Add `/nomin` launch option
-- Send notification from explorer individually when multiple criteria trigger on a single body
-- Potential minor performance improvement to grouped item handling
-- New setting for popup notification font scale
-- New setting for popup notification transparency
+- Fixes scaling issues in several places when display scaling was not set to 100%
+- Correctly saves and restores if plugins have been disabled
+- Added warning when enabling an out of date plugin
+- Fix issue where the panel content left behind when a plugin was popped out would not resize with the application window
+- Prevent single plugins with both "worker" and "notifier" interfaces from being listed twice
+- Save locations of popout windows when they are closed and re-opened
+- Ignore and proceed in odd edge case where the crash log could not be written to prevent actual error from being masked by crash log write failure
+- Add a placeholder "no devices present" entry for the audio dropdown when no audio devices are present at all
+- Stop processing of new "Jump", "Discovery", "BodySignals", and "AllBodies" custom journal processing when custom criteria are disabled
+- Correct issue where plugins could no longer correctly set plugin focus when target plugin was popped out
 
 
-### v1.1.0 - Centered and Signed
+## Previous Versions
 
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.0/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.1.0/ObservatoryPortable.zip)
-
-One minor new feature in this one, hence the bump to 1.1.0 instead of 1.0.5. Native popup notifications now have centered location options available.
-
-Of important note in this release is that signature checking has had a fix which should now allow it to work at all, so users with additional plugins will see *one time* warnings about signature validation. You can choose to accept this and you will not see the warning again for that plugin, or preferably for any plugins by that author if the author is signing their plugins.
-
-For plugin authors there is an update to Framework which adds a `ThemeChanged` method to the plugin interface, allowing your plugins to immediately handle changes to the application theme.
-
-- Popup notifications now have cenetered location options
-- Settings should now persist across updates for the portable build
-- Added `ThemeChanged` method to `IObservatoryPlugin`
-- Fix issue where journal files with duplicate timestamp parts could cause application errors
-- Fix issue where sufficiently large on foot combat bond totals was not properly handled
-- Corrected behaviour when a plugin has overridden native notifications and another plugin specifies native notification only
-- Fix signature checks
-
-### v1.0.4 - About Bugfixes
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.4/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.4/ObservatoryPortable.zip)
-
-Another small bugfix, and a minor new feature where plugins and the core application can now open an "about" box with details about themselves.
-
-- New "About" boxes for core and plugins
-- Fall back to first audio device when saved audio device selection missing or invalid
-- Fix settings loading issue in portable version
-
-### v1.0.3 - Bugfix 3
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.3/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.3/ObservatoryPortable.zip)
-
-Another small set of bugfixes for Observatory Core 1.0.
-
-* Handle case when Windows default audio device doesn't present through NAudio as device index -1.
-  * Also rename "Microsoft Sound Mapper" device to "Default Audio Device" to improve clarity
-* Improve settings loading failure UX by falling back to a sensible default for several issue-prone settings, should prevent seeing this error repeatedly after restarting application
-* Rudimentary handling for display scaling in plugin settings window
-  * Hoping to improve the appearance of this window further for *all* users, it's currently pretty awkward
-
-> Note: The portable bundle in this release has been refreshed with a minor post-release bugfix:
-> * Fix handling when loading StringCollection values from the portable config file.
-
-
-### v1.0.2 - Week One Bug Fixes
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.2/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.2/ObservatoryPortable.zip)
-
-Small set of bug fixes for last week's release. Most notably fixes the selected theme not correctly being applied on restart, and allowing custom themes to overwrite older versions of themselves.
-
-* Allow added themes to overwrite existing themes
-* Correctly load previous selected theme on startup
-* Fix startup crash when loading plugins with no UI columns
-* Auto-scroll lists to most recently added item when monitoring
-* Slightly relax requirement for window to be fully on-screen when reloading previous position
-
-### v1.0.1 - Multi-screen Bugfix
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1.0/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.1.0/ObservatoryPortable.zip)
-
-- Fixes an issue where screens were handled incorrectly on multi-display systems causing a potential error when displaying notifications
-- Stop erroneous display of being a "debug build" when certification checking failed
-
-### v1.0.0 - UI Overhaul
-
-Release versions:
-  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.0/ObservatorySetup.exe)
-  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.0.0/ObservatoryPortable.zip)
-
-It's finally here, but first there's an important point that needs attention.
-
-***MULTIPLE PLUGINS ARE BROKEN BY THIS UPDATE, YOU WILL NEED TO UPDATE THEM***
-
-Significant changes have been made to plugin presentation and behaviour. In most cases this can be fixed by updating the plugin as well, most plugins should have 1.0.0 compatible updates either already available or coming very soon.
-
-Now that's out of the way, what's actually in this update?
-
-#### What's New?!
-The Observatory UI has been completely overhauled and is hopefully now a little more intuitive. The main points of difference for end users are:
-- Switched from vertical side-tabs to traditional top-tabs
-- Rather than dumping every setting for every plugin onto the "Core" tab Plugin settings are now presented in their own windows, accessed by selecting a plugin and hitting the "Plugin Settings" button
-- Light and Dark themes are now available
-  - In addition it is possible to add user-created themes, instructions for creating them will come soon
-- "Read-All" gives an indication of progress, doesn't appear to just hard lock the application while running, *and* can be cancelled by the user if it appears to be taking too long
-- Plugins are no longer limited to simple grid views and can provide more complex UIs
-- Plugins can be individually toggled on/off using checkboxes on the plugin list
-- Resizing columns works (re-ordering soon, maybe)
-- Sorting by column works (plugins can opt to disable this if their data shouldn't be considered sortable)
-- Observatory better remembers its exited state in general, window location, column sizing, last tab viewed, *should* all persist
-- Notification plugins that take over audio or popup notification duties can now disable the settings pane for the associated native functionality (native voice notifications and Herald notifications can no long talk over each other)
-- Audio settings have been unified in the Core tab, rather than having individual conflicting settings per-plugin
-- Changing your journal folder location is harder to do accidentally (you need to double-click the journal folder path in the core settings pane)
-- Due to a UI framework change hopefully the annoying solid white popup bug is gone
-- Start Monitor On Launch and Read All On Launch settings have returned
-- Exporting has been improved and will now only export the tab your are currently on, as well as having both tab-separated .csv and .xlsx export options available
-- A button to quickly access the plugin data folder has been added
-- Explorer Custom Criteria has a [new criteria annotation syntax](/usage/plugins/explorer/customcriteria) that plays nicer with Lua development environments, though the original `::Label::` style annotations still work
-
-#### Another Note
-
-*There is a minor issue right now where some systems aren't able to read this signature and incorrectly report that Observatory is a debug build. This should not impact any usage of the application and can be ignored.*
-
-Observatory is now self-signed and checks all loaded plugins against its own signature to confirm their origin. If an unsigned or signed but not matching plugin is loaded the user will be presented with a one-time dismissable warning about running code from unknown sources.
-
-This is *not* a robust security measure, but I always felt a little weird about Observatory being a possible vector for malicious code. By running Observatory you are implicitly trusting *me* to not do anything untoward, but I can't really do anything about the plugins you load, which have just as much access and ability to run arbitrary code as Observatory does. This warning is only there to serve as a reminder that by loading these plugins you are extending that trust to additional parties.
+Looking for the past releases of Observatory that used to be listed on this page? You can now find them on the [Previous Versions](/release/previous) page.
