--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -5,7 +5,20 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.2.1 - For All
+## Latest 
+
+### v1.2.2 - Sizing It update
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.2/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.2/ObservatoryPortable.zip)
+
+A quick bug fix for two small issues which most people may never notice, but are _critically debilitating_ if you're affected by them.
+
+- Fixes sizing issue on some lower resolution displays
+- Restores functionality to change journal path by double-clicking journal folder location
+
+### v1.2.1 - For All
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.1/ObservatorySetup.exe)
