chore: wrong word

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,7 +7,7 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest 
 
-### v1.2.2 - Sizing It update
+### v1.2.2 - Sizing It Up
 
 Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.2/ObservatorySetup.exe)
