chore: not latest

--- a/pages/release/previous.mdx
+++ b/pages/release/previous.mdx
@@ -5,7 +5,7 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 # Observatory Core Downloads
 
-## Latest - v1.2.0 - Pop and Lock
+## v1.2.0 - Pop and Lock
 
 Release versions:
   * [Available to Patreon backers only](https://www.patreon.com/posts/116456767), general release for all Sunday night at midnight UTC.
