chore: fixing indentation

--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -28,7 +28,7 @@ This is the public release of v1.2.0 and also fixes several bugs which were iden
 
 Enjoy!
 
-### v1.2.0 Release Notes
+#### v1.2.0 Release Notes
 
 Version 1.2.0 is a significant UI refactor based on post 1.0 feedback and a number of long standing requests. The "Core" tab has been completely reworked to present the plugin list in a more useful fashion, and each has its own menu button for common functionality rather than the unintuitive need to select items before hitting the buttons below. Core application settings have also moved out into their own window to reduce core tab clutter.
 
@@ -54,7 +54,7 @@ Finally, this update unfortunately _removes_ the Observatory Herald plugin from 
 - Added list of patreon supporters to "about" info
 - No longer check or enforce plugin signing
 
-### v1.2.1 Bug Fixes
+#### v1.2.1 Bug Fixes
 
 - Fixes scaling issues in several places when display scaling was not set to 100%
 - Correctly saves and restores if plugins have been disabled
